# mochallama

./: .env.example  .gitignore  CLAUDE.md  HOW-TO-PUBLISH-AND-TEST.md  NOTICE  PUBLISHING.md  README.md  Taskfile.yml  build.gradle  inprogress.md  settings.gradle  test-completions.sh
.github/workflows/: build.yml  docs.yml  natives.yml  release.yml
app/: build.gradle
app/src/main/java/tools/deemwar/mochallama/: ChatBot.java  Llama3.java  MochallamaApplication.java  MochallamaChatController.java
app/src/main/resources/: application-phi-4-mini.properties  application-qwen2.5-1.5b.properties  application-qwen2.5-3b.properties  application-qwen3-4b.properties  application.properties
app/src/main/resources/static/: app.js  index.html  styles.css
app/src/test/java/tools/deemwar/mochallama/: ChatBotTest.java  Llama3Test.java  MochallamaApplicationTests.java
cli/: build.gradle
cli/npm/: README.md  package.json
cli/src/main/java/tools/deemwar/mochallama/cli/: ChatCommand.java  ChatSession.java  MochallamaCli.java  ModelRegistry.java  ModelsCommand.java  SessionStore.java  SessionsCommand.java
core/: build.gradle
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/include/: llamabridge.h
core/src/main/cpp/src/: llamabridge.cpp
core/src/main/java/tools/deemwar/mochallama/: ChatResult.java  GenerationOptions.java  LlamaException.java  Message.java  MochallamaClient.java  ModelInfo.java  ToolCall.java  ToolDefinition.java  Usage.java
core/src/main/java/tools/deemwar/mochallama/hf/: HuggingFaceModels.java
core/src/main/java/tools/deemwar/mochallama/panama/: ChatEngine.java  LlamaBridge.java  NativeLoader.java
core/src/test/java/tools/deemwar/mochallama/panama/: ChatEngineLiveTest.java  ModelGateLiveTest.java  NativeLoadSmokeTest.java
docs/: README.md  compare.md  index.md  package-lock.json  package.json  quickstart.md  why.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/blog/: 2026-06-12-calling-llamacpp-from-java-without-jni.md
docs/examples/: 00-curl.md  01-openai-sdk.md  02-spring-boot.md  03-cli.md  04-tools-and-streaming.md  index.md
docs/research/: 00-landscape.md  01-positioning.md  02-related-reading.md
docs/specs/: 00-overview.md  01-architecture.md  02-bridge-abi.md  03-decisions.md  04-deferred.md  05-release-and-publish.md  06-examples.md  07-example-verification-report.md  08-product-brief.md  HOW-TO-PUBLISH-AND-TEST.md  PUBLISHING.md  inprogress.md  models.md  observability.md  streaming-and-tools.md  tool-calling-support.md
examples/java-plain/: README.md  build.gradle  settings.gradle
examples/java-plain/src/main/java/demo/: Main.java
examples/spring-ai/: README.md  build.gradle
examples/spring-ai/src/main/java/demo/: AskController.java
examples/spring-ai/src/main/resources/: application.properties
examples/spring-boot/: README.md  build.gradle
examples/spring-boot/src/main/java/demo/: App.java
examples/spring-boot/src/main/resources/: application.properties
scripts/: publish-npm.sh
spring-ai/: build.gradle
spring-ai/src/main/java/tools/deemwar/mochallama/springai/: MochallamaChatModel.java  SpringAiAutoConfiguration.java
starter/: build.gradle
starter/src/main/java/tools/deemwar/mochallama/actuate/: MochallamaHealthIndicator.java
starter/src/main/java/tools/deemwar/mochallama/autoconfigure/: MochallamaActuatorAutoConfiguration.java  MochallamaAutoConfiguration.java  MochallamaProperties.java
starter/src/main/java/tools/deemwar/mochallama/service/: LlamaCppService.java
starter/src/main/java/tools/deemwar/mochallama/web/: ChatCompletionRequest.java  ChatCompletionResponse.java  ChatCompletionsController.java
